# aarch32

./: .gitignore  Cargo.toml  README.md  justfile  tests.sh
.cargo/: config.toml
.github/workflows/: build.yml
aarch32-cpu/: CHANGELOG.md  Cargo.toml  README.md  build.rs
aarch32-cpu/src/: asm.rs  asmv4.rs  asmv7.rs  cache.rs  critical_section.rs  interrupt.rs  lib.rs  mmu.rs  pmsav7.rs  pmsav8.rs  stacks.rs
aarch32-cpu/src/generic_timer/: el0.rs  el1.rs  el2.rs  mod.rs
aarch32-cpu/src/register/: actlr.rs  actlr2.rs  adfsr.rs  aidr.rs  aifsr.rs  amair0.rs  amair1.rs  bpiall.rs  ccsidr.rs  clidr.rs  contextidr.rs  cpacr.rs  cpsr.rs  csselr.rs  ctr.rs  dacr.rs  dc_sw_ops.rs  dccimvac.rs  dccisw.rs  dccmvac.rs  dccmvau.rs  dccsw.rs  dcimvac.rs  dcisw.rs  dfar.rs  dfsr.rs  dlr.rs  dracr.rs  drbar.rs  drsr.rs  dspsr.rs  fcseidr.rs  icc_pmr.rs  iciallu.rs  id_afr0.rs  id_dfr0.rs  id_isar0.rs  id_isar1.rs  id_isar2.rs  id_isar3.rs  (+60 more)
aarch32-cpu/src/register/armv8r/: cnthctl.rs  cnthp_tval.rs  cntp_ctl.rs  cntv_tval.rs  hacr.rs  hactlr.rs  haifsr.rs  hamair0.rs  hcptr.rs  hcr.rs  hdcr.rs  hdfar.rs  hmair0.rs  hmpuir.rs  hpfar.rs  hprbar.rs  hprbar0.rs  hprbar1.rs  hprbar10.rs  hprbar11.rs  hprbar12.rs  hprbar13.rs  hprbar14.rs  hprbar15.rs  hprbar2.rs  hprbar3.rs  hprbar4.rs  hprbar5.rs  hprbar6.rs  hprbar7.rs  hprbar8.rs  hprbar9.rs  hprenr.rs  hprlar.rs  hprlar0.rs  hprlar1.rs  hprlar10.rs  hprlar11.rs  hprlar12.rs  hprlar13.rs  (+52 more)
aarch32-cpu/src/register/generic_timer/: cntfrq.rs  cnthctl.rs  cnthp_ctl.rs  cnthp_cval.rs  cnthp_tval.rs  cntkctl.rs  cntp_ctl.rs  cntp_cval.rs  cntp_tval.rs  cntpct.rs  cntv_ctl.rs  cntv_cval.rs  cntv_tval.rs  cntvct.rs  cntvoff.rs  mod.rs
aarch32-cpu/src/register/hyp/: hacr.rs  hactlr.rs  hactlr2.rs  hadfsr.rs  haifsr.rs  hamair0.rs  hamair1.rs  hcptr.rs  hcr.rs  hcr2.rs  hdcr.rs  hdfar.rs  hifar.rs  hmair0.rs  hmair1.rs  hpfar.rs  hsctlr.rs  hsr.rs  hstr.rs  htpidr.rs  hvbar.rs  mod.rs
aarch32-cpu/src/register/imp/: imp_atcmregionr.rs  imp_bpctlr.rs  imp_btcmregionr.rs  imp_buildoptr.rs  imp_bustimeoutr.rs  imp_cbar.rs  imp_cdbgdcd.rs  imp_cdbgdci.rs  imp_cdbgdct.rs  imp_cdbgdr0.rs  imp_cdbgdr1.rs  imp_cdbgdr2.rs  imp_cdbgicd.rs  imp_cdbgict.rs  imp_csctlr.rs  imp_ctcmregionr.rs  imp_dcerr0.rs  imp_dcerr1.rs  imp_flasherr0.rs  imp_flasherr1.rs  imp_flashifregionr.rs  imp_icerr0.rs  imp_icerr1.rs  imp_intmonr.rs  imp_memprotctlr.rs  imp_periphpregionr.rs  imp_pinoptr.rs  imp_qosr.rs  imp_slavepctlr.rs  imp_tcmerr0.rs  imp_tcmerr1.rs  imp_tcmsyndr0.rs  imp_tcmsyndr1.rs  imp_testr0.rs
aarch32-rt/: CHANGELOG.md  Cargo.toml  README.md  build.rs  link.x
aarch32-rt-macros/: CHANGELOG.md  Cargo.toml  README.md
aarch32-rt-macros/src/: lib.rs
aarch32-rt/src/: lib.rs  regions.rs  sections.rs  stacks.rs
aarch32-rt/src/arch_v4/: abort.rs  hvc.rs  interrupt.rs  mod.rs  svc.rs  undefined.rs
aarch32-rt/src/arch_v7/: abort.rs  hvc.rs  interrupt.rs  mod.rs  svc.rs  undefined.rs
aarch32-rt/src/arch_v8_hyp/: interrupt.rs
arm-targets/: CHANGELOG.md  Cargo.toml  README.md
arm-targets/src/: lib.rs  main.rs
cortex-a-rt/: CHANGELOG.md  Cargo.toml  README.md
cortex-a-rt/src/: lib.rs
cortex-ar/: CHANGELOG.md  Cargo.toml  README.md
cortex-ar-rt-macros/: Cargo.toml  README.md
cortex-ar/src/: asm.rs  mmu.rs  pmsav7.rs  pmsav8.rs
cortex-ar/src/register/: actlr.rs  adfsr.rs  aidr.rs  amair0.rs  ccsidr.rs  contextidr.rs  cpacr.rs  csselr.rs  ctr.rs  dc_sw_ops.rs  dccimvac.rs  dccisw.rs  dccmvac.rs  dccmvau.rs  dcimvac.rs  dcisw.rs  dfar.rs  dfsr.rs  dracr.rs  fcseidr.rs  icc_pmr.rs  id_afr0.rs  id_dfr0.rs  id_isar1.rs  id_isar2.rs  id_isar4.rs  id_mmfr0.rs  id_mmfr2.rs  id_mmfr4.rs  id_pfr1.rs  ifsr.rs  irsr.rs  mair0.rs  mair1.rs  mpidr.rs  nsacr.rs  par.rs  pmceid0.rs  pmcntenclr.rs  pmcntenset.rs  (+14 more)
cortex-r-rt/: Cargo.toml  README.md
cortex-r-rt/src/: lib.rs
examples/c-code/: Cargo.toml  README.md  build.rs
examples/c-code/src/: library.c  library.h
examples/mps3-an536/: Cargo.toml  README.md  memory.x  rust-toolchain.toml
examples/mps3-an536-el2/: Cargo.toml  build.rs  rust-toolchain.toml
examples/mps3-an536-el2/reference/: generic-timer-thumbv8r-none-eabihf.out  gic-unified-irq-armv8r-none-eabihf.out
examples/mps3-an536-el2/src/: lib.rs
examples/mps3-an536-smp/: Cargo.toml
examples/mps3-an536-smp/reference/: gic-thumbv8r-none-eabihf.out
examples/mps3-an536-smp/src/: lib.rs
examples/mps3-an536/.cargo/: config.toml
examples/mps3-an536/reference/: abt-exception-a32-thumbv8r-none-eabihf.out  abt-exception-t32-thumbv8r-none-eabihf.out  el2_hello-armv8r-none-eabihf.out  generic_timer_irq-armv8r-none-eabihf.out  gic-priority-ceiling-armv8r-none-eabihf.out  gic-static-section-irq-armv8r-none-eabihf.out  gic-timer-armv8r-none-eabihf.out  mpu_setup-armv8r-none-eabihf.out  prefetch-exception-a32-armv8r-none-eabihf.out  prefetch-exception-t32-armv8r-none-eabihf.out  registers-armv8r-none-eabihf.out  registers-thumbv8r-none-eabihf.out  svc-a32-armv8r-none-eabihf.out
examples/mps3-an536/src/: lib.rs
examples/versatileab/: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
examples/versatileab/.cargo/: config.toml
examples/versatileab/reference/: abt-exception-a32-armv4t-none-eabi.out  abt-exception-a32-armv6-none-eabi.out  abt-exception-a32-thumbv7a-none-eabihf.out  abt-exception-a32-thumbv7r-none-eabi.out  abt-exception-t32-armv4t-none-eabi.out  abt-exception-t32-armv5te-none-eabi.out  abt-exception-t32-armv6-none-eabi.out  abt-exception-t32-armv7a-none-eabihf.out  c_test-thumbv7r-none-eabi.out  fast-interrupt-thumbv5te-none-eabi.out  generic_timer-armv7r-none-eabi.out  interrupt-armv7a-none-eabihf.out  prefetch-exception-a32-armv4t-none-eabi.out  prefetch-exception-a32-armv5te-none-eabi.out  prefetch-exception-a32-armv6-none-eabi.out  prefetch-exception-a32-armv7a-none-eabihf.out  prefetch-exception-a32-thumbv6-none-eabi.out  prefetch-exception-a32-thumbv7r-none-eabi.out  prefetch-exception-t32-armv6-none-eabi.out  prefetch-exception-t32-armv7a-none-eabi.out  prefetch-exception-t32-armv7r-none-eabihf.out  (+11 more)
(+90 files in other folders)
