[package]
authors = [
    "Jonathan Pallant <jonathan.pallant@ferrous-systems.com>",
    "The Embedded Devices Working Group Arm Team <arm@teams.rust-embedded.org>",
]
categories = [
    "embedded",
    "no-std",
]
description = "CPU support for AArch32 Arm Processors"
edition = "2024"
keywords = [
    "arm",
    "cortex-a",
    "cortex-r",
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"
name = "aarch32-cpu"
readme = "README.md"
repository = "https://github.com/rust-embedded/aarch32.git"
homepage = "https://github.com/rust-embedded/aarch32"
rust-version = "1.85"
version = "0.2.0"

[dependencies]
arbitrary-int = "2"
bitbybit = "2"
num_enum = { version = "0.7", default-features = false }
critical-section = {version = "1.2.0", features = ["restore-state-u8"], optional = true}
thiserror = { version = "2", default-features = false }
defmt = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], default-features = false, optional = true }

[build-dependencies]
arm-targets = { version = "0.4.0", path = "../arm-targets" }

[features]
# Adds a critical-section implementation that only disables interrupts.
# This is not sound on multi-core systems because interrupts are per-core.
critical-section-single-core = ["critical-section"]
# Adds a critical-section implementation that disables interrupts and does
# a CAS spinlock.
critical-section-multi-core = ["critical-section"]
# Adds defmt::Format implementation for the register types
defmt = ["dep:defmt", "arbitrary-int/defmt"]
serde = ["dep:serde", "arbitrary-int/serde"]
# Stops assembly routines being inlined, so they can be checked when this
# library is compiled (as opposed to when the function is used)
check-asm = []

[package.metadata.docs.rs]
targets = [
    "armebv7r-none-eabi",
    "armebv7r-none-eabihf",
    "armv4t-none-eabi",
    "armv5te-none-eabi",
    "armv6-none-eabi",
    "armv6-none-eabihf",
    "armv7a-none-eabi",
    "armv7a-none-eabihf",
    "armv7r-none-eabi",
    "armv7r-none-eabihf",
    "armv8r-none-eabihf",
    "thumbv4t-none-eabi",
    "thumbv5te-none-eabi",
    "thumbv6-none-eabi",
    "thumbv7a-none-eabi",
    "thumbv7a-none-eabihf",
    "thumbv7r-none-eabi",
    "thumbv7r-none-eabihf",
    "thumbv8r-none-eabihf",
]
cargo-args = ["-Z", "build-std"]

[lints.rust]
missing_docs = "warn" # Indicates missing documentation on public functions
missing_abi = "warn" # Explicit ABI documents the assumptions of the code
unsafe_op_in_unsafe_fn = "warn" # Satisfies the recommendation in section 4.3.1
elided_lifetimes_in_paths = "warn" # Highlights confusing implicit use of types with lifetimes
explicit_outlives_requirements = "warn" # Less explicit lifetime bounds improve readability
macro_use-extern_crate = "warn" # obscures the source of identifiers
meta_variable_misuse = "warn" # More macro quality checks outweigh potential false positives
non-local-definitions = "warn" # Highlights outdated and confusing location of definitions
redundant-lifetimes = "warn" # Highlights a mistake or unfinished code
single-use-lifetimes = "warn" # Simplifies code, improving readability
trivial-numeric-casts = "warn" # Simplifies code, improving readability
unit-bindings = "warn" # Simplifies code, improving readability
unnameable-types = "warn" # Highlights inconsistency in public interface
unreachable-pub = "warn" # Highlights inconsistency in public interface
variant-size-differences = "warn" # Highlights inefficient data structures
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"
unused = { level = "warn", priority = -1 } # this group might overlap
unused_results = "warn"
unused-qualifications = "warn"
unused-lifetimes = "warn"
unused-import-braces = "warn"

[lints.clippy]
cast_lossless = "warn" # Indicates a more idiomatic way to replace the cast
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "warn" # Should be checked for and properly handled in safety related projects
exit = "warn" # Calling exit directly is likely wrong in a safety related environment
infinite_loop = "warn" # Indicates improper return type
iter_over_hash_type = "warn" # Indicates unpredictable order
invalid_upcast_comparisons = "warn" # Likely wrong code
lossy_float_literal = "warn" # Indicates rounding error
missing_errors_doc = "warn" # Indicates incomplete documentation
missing_docs_in_private_items = "warn" # Undocumented internal items are not an option
panic_in_result_fn = "warn" # Indicates unexpected behavior
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
transmute_ptr_to_ptr = "warn" # Safer alternative available
redundant_type_annotations = "warn" # Simpler code, highlights special cases
shadow_unrelated = "warn" # Unidiomatic and high-risk use of shadowing
try_err = "warn" # Indicates non-idiomatic way to avoid return
wildcard_enum_match_arm = "warn" # See section 4.4.21.3, clashes with non-exhaustive
as_underscore = "warn"
format_push_string = "warn" # Avoids extra allocation
as_ptr_cast_mut = "deny" # Clear misuse with a better alternative
let_underscore_must_use = "deny" # Prevents a shortcut to ignore must-use results
missing_panics_doc = "deny" # Indicates missing panic documentation
undocumented_unsafe_blocks = "deny" # Indicates missing "unsafe" reasoning
wildcard_imports = "deny" # Indicates unconstrained symbol imports
declare_interior_mutable_const = "deny" # Indicates common mistake
